package com.example.homework.Adapter_pattern;

// 这是合作团队提供的类，我们无法修改它的代码
public class Angle {
    public void drawAngle() {
        System.out.println("Drawing Angle");
    }
}
