package com.example.homework.Adapter_pattern;

public class Line implements Shape {
    @Override
    public void draw() {
        System.out.println("Drawing Line");
    }
}
