package com.example.homework.Adapter_pattern;

public interface Shape {
    void draw();
}
